# the_subtle_art_of_not_giving_a_flix

./: .gitignore  README.md  pyproject.toml
EDA/: explore.py
data_collection/: read_data.py
rec_engine/: content_based.py  end2end.py
