[project]
name = "the-subtle-art-of-not-giving-a-flix"
version = "0.1.0"
description = ""
authors = [
    {name = "Eshaan Minocha, Priyanshi Sethi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
