[tool.poetry]
name = "the-subtle-art-of-not-giving-a-flix"
version = "0.1.0"
description = ""
authors = ["Eshaan Minocha"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
numpy = "1.26.0"
requests = ">=2.32.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
